[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohmg"
description = "A web georeferencing application for historical maps."
version = "0.1.0-beta"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Adam Cox", email = "adam@legiongis.com"},
]
dependencies = [
    "django>4,<5",
    "django-storages==1.13.2",
    "django-avatar==7.1.1",
    "django_extensions==3.2.1",
    "django-oauth2-provider==0.2.6.1",
    "django-allauth==0.55.2",
    "django-markdownx==4.0.7",
    "django-grappelli==2.15.7",
    "django-ninja==0.21.0",
    "psycopg2==2.9.5",
    "python-dotenv==1.0.0",
    "kombu==5.6.0",
    "celery==5.6.0",
    "django_celery_results==2.5.0",
    "requests==2.28.2",
    "numpy==1.24.2",
    "sorl-thumbnail==12.8.0",
    "dialogos==0.4",
    "pinax==0.9a2",
    "pinax-announcements==4.0.1",
    "gdal>=3.5,<3.6",
    "Pillow<10.0.0",
    "django_compressor",
    "natsort",
    "python-dotenv",
    "django-json-widget",
    "beautifulsoup4",
    "python-slugify",
    "humanize",
    "lxml",
    "setuptools",
    # for celery beat
    "pytz"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "django_debug_toolbar==4.0.0",
    "django-cprofile-middleware==1.0.5",
    "pygraphviz",
    "ruff",
    "coverage",
]
prod = [
    "uwsgi",
    "boto3",
]
docs = [
    "zensical>=0.0.23",
]

[tool.setuptools]
packages = [
    "ohmg"
]

[tool.ruff]
line-length = 100
lint.select = [
  # These are a copy of the Ruff defaults
  # "F" is Pyflakes, "E" is pycodestyle
  "E4", "E7", "E9", "F",
  # "A", # flake8-builtins
  # "B", # flake8-bugbear
  # "C4", # flake8-comprehensions
  # "C90", # mccabe
  # "COM", # flake8-commas
  # "D", # pydocstyle
  # "FIX", # flake8-fixme
  # "RUF100", # Ruff rule: Enforce that noqa directives are "valid"
  # "S", # flake8-bandit
  "I", # sorted imports
]
